--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
     </HEAD>
         <body>
             List of Portfolio and Future Project
+            Contact for Inquiry
         </body>
 
 </HTML>
