Added Hello, table, index, and coffeeart picture

--- a/template.html
+++ b/template.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <HTML>
     <HEAD>
-    <title>The Webpage of Elroy Premana</TITLE>
+    <title>Home : The Webpage of Elroy Premana</TITLE>
     </HEAD>
         <body>
-            List of Portfolio and Future Project
-            Contact for Inquiry
+            <strong>List of Portfolio and Future Project</strong> <br>
+            Contact for Inquiry<br>
+            <img src="coffeeart.jpg" height="100%">
         </body>
 
 </HTML>
