Adding New Branch and Improvement on HTML AND CSS Webpage

--- a/cvtable.html
+++ b/cvtable.html
@@ -4,6 +4,21 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Personal Data</title>
+    <style>
+        table {
+            border : 2px solid black;
+            border-top-color: brown
+            border-collapse: collapse;
+            width : 50%;
+        }
+
+        th tr td {
+            border : 1px solid black;
+            padding : 10px;
+            text-align: center;
+            text-align-last: left
+        }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
